--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TimespanLogging = "a526e669-04d3-4846-9525-c66122c55f63"
 hsa_rocr_jll = "dd59ff1a-a01a-568d-8b29-0669330f116a"
 rocBLAS_jll = "1ef8cab2-a151-54b4-a57f-5fbb4046a4ab"
 rocRAND_jll = "a6151927-a32b-54c0-bc8c-bbd7b3f1a996"
@@ -50,6 +51,7 @@ ROCmDeviceLibs_jll = "4, 5"
 Requires = "1"
 Setfield = "0.5, 0.6, 0.7, 1.0"
 SpecialFunctions = "1, 2"
+TimespanLogging = "0.1"
 hsa_rocr_jll = "4, 5"
 julia = "1.7"
 rocBLAS_jll = "4, 5"
