Add occupancy API and auto groupsize calculation
Copy the occupancy API algorithm from HIP
Add `groupsize=:auto` option to at-roc to automatically choose groupsize
Implement `launch_configuration` API

--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,8 @@ LLVM_jll = "86de99a1-58d6-5da7-8064-bd56ce2e322c"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+MsgPack = "99f44e22-a591-53d1-9472-aa23ef4bd671"
+ObjectFile = "d8793406-e978-5875-9003-1fc021f44a92"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Preferences = "21216c6a-2e73-6563-6e65-726566657250"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -46,6 +48,8 @@ LLD_jll = "12, 13, 14"
 LLVM = "4.6"
 LLVM_jll = "12, 13, 14"
 MacroTools = "0.5"
+MsgPack = "1"
+ObjectFile = "0.3"
 Preferences = "1"
 ROCmDeviceLibs_jll = "4, 5"
 Requires = "1"
